2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/gtk-secure-entry.c: Supress warning
    * agent/seahorse-agent.c: 
    * src/main.c: Force exit on all warnings in debug mode    
    * agent/seahorse-agent-cache.c: Initialize memory properly
    
2005-07-27  Nate Nielsen  <nielsen@memberwebs.com>
    
    * NEWS: New release 0.7.9
    * configure.in: New version number 0.8
    * src/seahorse-key-manager.c: Fix problem with compiling
    without WITH_KEYSERVER (bug #310682)
    
2005-07-18  Nate Nielsen  <nielsen@memberwebs.com>

    * help/C/seahorse.xml: Removed portions of documentation which
    don't apply to stable branch.
    
2005-07-17 Adam Schreiber <sadam@clemson.edu>
	* libseahorse/seahorse-key-store.c:
        * libseahorse/seahorse-multi-source.c: Patch from Flavio daCosta
          (bug #310214)

2005-07-11 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Preferences(bug #309360)

2005-07-09 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for File Manager(bug #309360)

2005-07-04 Adam Schreiber <sadam@clemson.edu>
	* help/C/seahorse.xml: Added text for Text Editor(bug #309360)

2005-07-03  Adam Schreiber <sadam@clemson.edu>
    * src/seahorse-generate-select.glade: Fix problem where pressing
    <return> doesn't activate continue button.
    * help/C/seahorse.xml: Begin Documentation Overhaul (bug #309360)
    
2005-07-02  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Fix problem where pressing
    <return> doesn't activate search button. 
    Patch by Adam Schreiber (bug #157818)
    * libseahorse/seahorse-util.c: Make sure keyring backups are 
    only readable by current user. 
    Patch by Adam Schreiber (bug #308163)
    * libseahorse/seahorse-context.c: Added precondition check to 
    seahorse_context_get_key_source
    
2005-06-05  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.
