@@ -4,7 +4,8 @@
     * agent/seahorse-agent.c: 
     * src/main.c: Force exit on all warnings in debug mode    
     * agent/seahorse-agent-cache.c: Initialize memory properly
-    
+    * agent/seahorse-agent-io.c: Debug logging for agent communications
+
 2005-07-27  Nate Nielsen  <nielsen@memberwebs.com>
     
     * NEWS: New release 0.7.9
